[tool.poetry]
name = "pykomodefi"
version = "0.2.5"
description = "A wrapper for the Komodo DeFi Framework API"
authors = ["smk <smk@komodoplatform.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/smk762/pykomodefi"
repository = "https://github.com/smk762/pykomodefi"
documentation = "https://github.com/smk762/pykomodefi"
keywords = ["dex", "crypto", "komodo", "defi", "api", "trading", "atomic swaps"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
flake8 = "^7.3.0"
pytest-flake8 = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
